Package: future.batchtools
==========================

Version: 0.7.2-9000 [2019-05-02]

NEW FEATURES:

 * Debug messages are now prepended with a timestamp.

 * Now a more informative error message is produced if a batchtools *.tmpl
   template file was not found.

 * Setting option 'future.delete' to FALSE will now prevent removal of the
   batchtools registry folders.

BUG FIXES:

 * Argument 'workers' could not be a function.

 * Argument 'workers' of type character was silently accepted and effectively
   interpreted as workers = length(workers).


Version: 0.7.2 [2018-12-03]

DOCUMENTATION:

 * Add a simple example(future_custom).

FIXES:

 * Made internal code agile to upcoming changes in the future package on
   how a captured error is represented.

SOFTWARE QUALITY:

 * FYI: Every release is tested against one Torque/PBS and one SGE scheduler.
 
BUG FIXES:

 * resolve() on a lazy batchtools future would stall and never return.
 

Version: 0.7.1 [2018-07-18]

NEW FEATURES:

 * The batchtools_* backends support the handling of the standard output as
   implemented in future (>= 1.9.0).
 
BUG FIXES:

 * A bug was introduced in future.batchtools 0.7.0 that could result in "Error 
   in readLog(id, reg = reg) : Log file for job with id 1 not available" when
   using one of the batchtools backends.  It occurred when the value was
   queried.  It was observered using 'batchtools_torque' but not when using
   'batchools_local'.  This bug was missed because the 0.7.0 release was not
   tested on an TORQUE/PBS HPC scheduler as it should have.


Version: 0.7.0 [2018-05-03]

NEW FEATURES:

 * Argument 'workers' of future strategies may now also be a function, which
   is called without argument when the future strategy is set up and used as
   is.  For instance, plan(callr, workers = halfCores) where
   halfCores <- function() { max(1, round(availableCores() / 2)) } will use
   half of the number of available cores.  This is useful when using nested