@@ -13,6 +13,13 @@ NEW FEATURES:
  * Setting option 'future.delete' to FALSE will now prevent removal of the
    batchtools registry folders.
 
+ * When a batchtools job expires, for instance when the scheduler terminates
+   it because the job was running out of its allocated resources, then a
+   BatchtoolsFutureError is produced which by default outputs the tail of the
+   output logged by batchtools.  The default number of lines displayed from
+   the end is now increased to from six to 48 - a number which now can be set
+   via option 'future.batchtools.expiration.tail'.
+
 BUG FIXES:
 
  * Argument 'workers' could not be a function.
